--- a/app/src/main/res/layout/track_layout.xml
+++ b/app/src/main/res/layout/track_layout.xml
@@ -3,6 +3,10 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="10dp"
+    android:clickable="true"
+    android:focusable="true"
+    android:foreground="?android:selectableItemBackground"
+    android:longClickable="true"
     android:orientation="vertical">
 
     <RelativeLayout
