--- a/app/src/main/res/layout/track_layout.xml
+++ b/app/src/main/res/layout/track_layout.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="10dp"
     android:clickable="true"
     android:focusable="true"
     android:foreground="?android:selectableItemBackground"
-    android:longClickable="true"
-    android:orientation="vertical">
+    android:longClickable="true">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -16,14 +15,31 @@
         <TextView
             android:id="@+id/trackTitle"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_margin="5dp"
+            android:layout_toStartOf="@id/popUpButton"
+            android:gravity="center" />
 
         <TextView
             android:id="@+id/trackArtist"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/trackTitle" />
+            android:layout_below="@+id/trackTitle"
+            android:layout_alignParentStart="true"
+            android:layout_margin="5dp"
+            android:layout_toStartOf="@id/popUpButton" />
+
+        <ImageView
+            android:id="@+id/popUpButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_margin="10dp"
+            android:foregroundGravity="center"
+            android:src="@drawable/ic_popup"
+            android:visibility="invisible" />
 
     </RelativeLayout>
 
-</android.support.v7.widget.CardView>
+</androidx.cardview.widget.CardView>
